--- a/configuration.props
+++ b/configuration.props
@@ -17,11 +17,12 @@
         <AssemblyPatcherTaskOn        Condition="'$(AssemblyPatcherTaskOn)'==''">false</AssemblyPatcherTaskOn>
         
         <VSVersion Condition="'$(VSVersion)'==''">$(VisualStudioVersion)</VSVersion>
-        <TargetFSharpDataVersion>2.2.5.0</TargetFSharpDataVersion>
+        <TargetFSharpDataVersion>3.0.0.0</TargetFSharpDataVersion>
         
         <TargetFSharpCoreVersion Condition="'$(VSVersion)'=='11.0'">4.3.1.0</TargetFSharpCoreVersion>
         <TargetFSharpCoreVersion Condition="'$(VSVersion)'=='12.0'">4.3.1.0</TargetFSharpCoreVersion>
         <TargetFSharpCoreVersion Condition="'$(VSVersion)'=='14.0'">4.4.0.0</TargetFSharpCoreVersion>
+        <TargetFSharpCoreVersion Condition="'$(VSVersion)'=='15.0'">4.4.1.0</TargetFSharpCoreVersion>
         
         <FSharpFolder Condition="'$(TargetFSharpCoreVersion)'=='4.3.1.0'">FSharp431</FSharpFolder>
         <FSharpFolder Condition="'$(TargetFSharpCoreVersion)'=='4.3.1.0'">FSharp431</FSharpFolder>
@@ -31,11 +32,12 @@
         <OutFolder Condition="'$(VSVersion)'=='11.0'">vs12</OutFolder>
         <OutFolder Condition="'$(VSVersion)'=='12.0'">vs13</OutFolder>
         <OutFolder Condition="'$(VSVersion)'=='14.0'">vs15</OutFolder>
+        <OutFolder Condition="'$(VSVersion)'=='15.0'">vs17</OutFolder>
 
         <ExtensionOutputPath     Condition="'$(ExtensionOutputPath)'==''">$(MSBuildThisFileDirectory)BuildDrop\$(OutFolder)\</ExtensionOutputPath>
         <OBJDir>$(MSBuildThisFileDirectory)ObjDrop\$(OutFolder)\$(Configuration)\$(TSPlatform)</OBJDir>
         <IntermediateOutputPath>$(OBJDir)$(MSBuildProjectName)\</IntermediateOutputPath>
-		<VSSonarVersion>5.3.0</VSSonarVersion>
+		<VSSonarVersion>6.0.0</VSSonarVersion>
 		<VSSonarExtensionVersion>3Api.$(VSSonarVersion)</VSSonarExtensionVersion>
 		<PackagesFolder>$(MSBuildThisFileDirectory)Packages</PackagesFolder>
     </PropertyGroup>    
@@ -43,6 +45,7 @@
     <!-- Basic settings -->
     <PropertyGroup>
         <VSSonarExtensionVersion                                     Condition="'$(VSVersion)'=='14.0'">4Api.$(VSSonarVersion)</VSSonarExtensionVersion>
+        <VSSonarExtensionVersion                                     Condition="'$(VSVersion)'=='15.0'">41Api.$(VSSonarVersion)</VSSonarExtensionVersion>
     </PropertyGroup>
     
     </Project>
