--- a/src/AnalysisPlugin.Test/AnalysisPlugin.Test.csproj
+++ b/src/AnalysisPlugin.Test/AnalysisPlugin.Test.csproj
@@ -29,11 +29,11 @@
   <ItemGroup>
     <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion)">
     </Reference>
-    <Reference Include="FSharp.Data, Version=2.2.5.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="FSharp.Data, Version=$(TargetFSharpDataVersion), Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\VSSonarExtensionPlugin$(VSSonarExtensionVersion)\lib\FSharp.Data.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="FSharp.Data.DesignTime, Version=2.2.5.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="FSharp.Data.DesignTime, Version=$(TargetFSharpDataVersion), Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\VSSonarExtensionPlugin$(VSSonarExtensionVersion)\lib\FSharp.Data.DesignTime.dll</HintPath>
       <Private>True</Private>
     </Reference>
