--- a/src/AnalysisPlugin/AnalysisPlugin.fsproj
+++ b/src/AnalysisPlugin/AnalysisPlugin.fsproj
@@ -18,7 +18,8 @@
     <TreatWarningsAsErrors>False</TreatWarningsAsErrors>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <TargetFrameworkProfile />
-    <NuGetPackageImportStamp>feef3b96</NuGetPackageImportStamp>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -94,16 +95,19 @@
       <Private>True</Private>
     </ProjectReference>
     <Reference Include="FParsec">
-      <HintPath>..\..\packages\FSharpLint.Core.0.0.6-beta\lib\FParsec.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>..\..\packages\FParsec.1.0.2\lib\net40-client\FParsec.dll</HintPath>
     </Reference>
     <Reference Include="FParsecCS">
-      <HintPath>..\..\packages\FSharpLint.Core.0.0.6-beta\lib\FParsecCS.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>..\..\packages\FParsec.1.0.2\lib\net40-client\FParsecCS.dll</HintPath>
     </Reference>
     <Reference Include="FSharp.Compiler.Service">
-      <HintPath>..\..\packages\FSharp.Compiler.Service.1.4.0.0-beta\lib\net45\FSharp.Compiler.Service.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>..\..\packages\FSharp.Compiler.Service.13.0.0\lib\net45\FSharp.Compiler.Service.dll</HintPath>
+    </Reference>
+    <Reference Include="FSharp.Compiler.Service.MSBuild.v12">
+      <HintPath>..\..\packages\FSharp.Compiler.Service.MSBuild.v12.13.0.0\lib\net45\FSharp.Compiler.Service.MSBuild.v12.dll</HintPath>
+    </Reference>
+    <Reference Include="FSharp.Compiler.Service.ProjectCracker">
+      <HintPath>..\..\packages\FSharp.Compiler.Service.ProjectCracker.13.0.0\lib\net45\FSharp.Compiler.Service.ProjectCracker.dll</HintPath>
     </Reference>
     <Reference Include="FSharp.Data">
       <HintPath>..\..\packages\VSSonarExtensionPlugin$(VSSonarExtensionVersion)\lib\FSharp.Data.dll</HintPath>
@@ -113,17 +117,8 @@
       <HintPath>..\..\packages\VSSonarExtensionPlugin$(VSSonarExtensionVersion)\lib\FSharp.Data.DesignTime.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="FSharpLint.Application">
-      <HintPath>..\..\packages\FSharpLint.Core.0.0.6-beta\lib\FSharpLint.Application.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="FSharpLint.Framework">
-      <HintPath>..\..\packages\FSharpLint.Core.0.0.6-beta\lib\FSharpLint.Framework.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="FSharpLint.Rules">
-      <HintPath>..\..\packages\FSharpLint.Core.0.0.6-beta\lib\FSharpLint.Rules.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="FSharpLint.Core">
+      <HintPath>..\..\packages\FSharpLint.Core.0.7.6\lib\net45\FSharpLint.Core.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CodeAnalysis">
       <HintPath>..\..\packages\Microsoft.CodeAnalysis.Common.1.1.1\lib\net45\Microsoft.CodeAnalysis.dll</HintPath>
@@ -162,7 +157,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Collections.Immutable">
-      <HintPath>..\..\packages\System.Collections.Immutable.1.1.37\lib\dotnet\System.Collections.Immutable.dll</HintPath>
+      <HintPath>..\..\packages\System.Collections.Immutable.1.3.1\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -194,8 +189,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Reflection.Metadata">
-      <HintPath>..\..\packages\System.Reflection.Metadata.1.1.0\lib\dotnet5.2\System.Reflection.Metadata.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>..\..\packages\System.Reflection.Metadata.1.4.2\lib\portable-net45+win8\System.Reflection.Metadata.dll</HintPath>
     </Reference>
     <Reference Include="System.RunTime" />
     <Reference Include="System.ComponentModel.Composition" />
@@ -219,5 +213,7 @@
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('..\..\packages\AssemblyPatcherTask.1.0.5\build\AssemblyPatcherTask.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\AssemblyPatcherTask.1.0.5\build\AssemblyPatcherTask.targets'))" />
+    <Error Condition="!Exists('..\..\packages\FSharp.Compiler.Service.ProjectCracker.13.0.0\build\net45\FSharp.Compiler.Service.ProjectCracker.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\FSharp.Compiler.Service.ProjectCracker.13.0.0\build\net45\FSharp.Compiler.Service.ProjectCracker.targets'))" />
   </Target>
+  <Import Project="..\..\packages\FSharp.Compiler.Service.ProjectCracker.13.0.0\build\net45\FSharp.Compiler.Service.ProjectCracker.targets" Condition="Exists('..\..\packages\FSharp.Compiler.Service.ProjectCracker.13.0.0\build\net45\FSharp.Compiler.Service.ProjectCracker.targets')" />
 </Project>
