--- a/src/FSharpLintRunner/FSharpLintRunner.fsproj
+++ b/src/FSharpLintRunner/FSharpLintRunner.fsproj
@@ -13,7 +13,8 @@
     <Name>FSharpLintRunner</Name>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <TargetFrameworkProfile />
-    <NuGetPackageImportStamp>e53177fc</NuGetPackageImportStamp>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -52,6 +53,17 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="Rules/ConfHelper.fs" />
+    <Compile Include="Rules\BindingConfig.fs" />
+    <Compile Include="Rules\NumberOfItemsConfig.fs" />
+    <Compile Include="Rules\NestedStatementsConfig.fs" />
+    <Compile Include="Rules\TypographyConfig.fs" />
+    <Compile Include="Rules\FunctionReimplementationConfig.fs" />
+    <Compile Include="Rules\RaiseWithTooManyArgumentsConfig.fs" />
+    <Compile Include="Rules\HintsConfig.fs" />
+    <Compile Include="Rules\RedundantNewKeywordConfig.fs" />
+    <Compile Include="Rules/NamingConventionsConfig.fs" />
+    <Compile Include="Rules/SourceLengthConfig.fs" />
     <Compile Include="InputConfigHandler.fs" />
     <Compile Include="FSharpLintRunner.fs" />
     <None Include="app.config" />
@@ -59,16 +71,19 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FParsec">
-      <HintPath>..\..\packages\FSharpLint.Core.0.0.14\lib\FParsec.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>..\..\packages\FParsec.1.0.2\lib\net40-client\FParsec.dll</HintPath>
     </Reference>
     <Reference Include="FParsecCS">
-      <HintPath>..\..\packages\FSharpLint.Core.0.0.14\lib\FParsecCS.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>..\..\packages\FParsec.1.0.2\lib\net40-client\FParsecCS.dll</HintPath>
     </Reference>
     <Reference Include="FSharp.Compiler.Service">
-      <HintPath>..\..\packages\FSharp.Compiler.Service.2.0.0.3\lib\net45\FSharp.Compiler.Service.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>..\..\packages\FSharp.Compiler.Service.13.0.0\lib\net45\FSharp.Compiler.Service.dll</HintPath>
+    </Reference>
+    <Reference Include="FSharp.Compiler.Service.MSBuild.v12">
+      <HintPath>..\..\packages\FSharp.Compiler.Service.MSBuild.v12.13.0.0\lib\net45\FSharp.Compiler.Service.MSBuild.v12.dll</HintPath>
+    </Reference>
+    <Reference Include="FSharp.Compiler.Service.ProjectCracker">
+      <HintPath>..\..\packages\FSharp.Compiler.Service.ProjectCracker.13.0.0\lib\net45\FSharp.Compiler.Service.ProjectCracker.dll</HintPath>
     </Reference>
     <Reference Include="FSharp.Data">
       <HintPath>..\..\packages\VSSonarExtensionPlugin$(VSSonarExtensionVersion)\lib\FSharp.Data.dll</HintPath>
@@ -78,21 +93,8 @@
       <HintPath>..\..\packages\VSSonarExtensionPlugin$(VSSonarExtensionVersion)\lib\FSharp.Data.DesignTime.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="FSharpLint.Application">
-      <HintPath>..\..\packages\FSharpLint.Core.0.0.14\lib\FSharpLint.Application.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="FSharpLint.Framework">
-      <HintPath>..\..\packages\FSharpLint.Core.0.0.14\lib\FSharpLint.Framework.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="FSharpLint.Rules">
-      <HintPath>..\..\packages\FSharpLint.Core.0.0.14\lib\FSharpLint.Rules.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="FSharpLint.Worker">
-      <HintPath>..\..\packages\FSharpLint.Core.0.0.14\lib\FSharpLint.Worker.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="FSharpLint.Core">
+      <HintPath>..\..\packages\FSharpLint.Core.0.7.6\lib\net45\FSharpLint.Core.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Build.Utilities.v4.0" />
     <Reference Include="mscorlib" />
@@ -106,6 +108,13 @@
     <Reference Include="SonarRestService">
       <HintPath>..\..\packages\VSSonarExtensionPlugin$(VSSonarExtensionVersion)\lib\SonarRestService.dll</HintPath>
       <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Collections.Immutable">
+      <HintPath>..\..\packages\System.Collections.Immutable.1.3.1\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="System.Reflection.Metadata">
+      <HintPath>..\..\packages\System.Reflection.Metadata.1.4.2\lib\portable-net45+win8\System.Reflection.Metadata.dll</HintPath>
     </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
@@ -127,7 +136,9 @@
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('..\..\packages\AssemblyPatcherTask.1.0.5\build\AssemblyPatcherTask.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\AssemblyPatcherTask.1.0.5\build\AssemblyPatcherTask.targets'))" />
+    <Error Condition="!Exists('..\..\packages\FSharp.Compiler.Service.ProjectCracker.13.0.0\build\net45\FSharp.Compiler.Service.ProjectCracker.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\FSharp.Compiler.Service.ProjectCracker.13.0.0\build\net45\FSharp.Compiler.Service.ProjectCracker.targets'))" />
   </Target>
+  <Import Project="..\..\packages\FSharp.Compiler.Service.ProjectCracker.13.0.0\build\net45\FSharp.Compiler.Service.ProjectCracker.targets" Condition="Exists('..\..\packages\FSharp.Compiler.Service.ProjectCracker.13.0.0\build\net45\FSharp.Compiler.Service.ProjectCracker.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
